# physics

./: .gitignore  Ball.h  CMakeLists.txt  Collider.h  Constraint.h  Grid.h  Object.h  PhysicsWorld.cpp  PhysicsWorld.h  README.md  Spring.h  main  main.cpp
UI/: CounterPanel.h  InfoPanel.h
tests/: test_collision.cpp  test_constraints.cpp  test_main.cpp  test_verlet.cpp
